fix(Message): align message header vertically

--- a/src/components/Message/Message.css
+++ b/src/components/Message/Message.css
@@ -53,19 +53,14 @@
 
 .sender {
   display: inline-block;
-  height: 20px;
   margin-right: 6px;
-  vertical-align: bottom;
   letter-spacing: -0.3px;
-  line-height: 20px;
 }
 
 .title {
   display: inline-block;
-  vertical-align: bottom;
   font-size: 16px;
   font-weight: 500;
-  line-height: 20px;
 
   @apply --no-select;
 }
@@ -73,9 +68,7 @@
 .username {
   display: inline-block;
   margin-left: 6px;
-  vertical-align: bottom;
   font-size: 14px;
-  line-height: 20px;
   color: var(--message-username-color);
   @apply --no-select;
 }
